# preditor-salario-ti

./: .gitignore  README.md  pyproject.toml
data/processed/: prepared_dataset.csv
data/raw/: ASM8E.txt  PROJETO_FINAL_VIEGAS.excalidraw  apresentacao_alarme.pptx
data/raw/Exemplos/: Algoritmo_IntDiv.txt  AllOpCodes.asm  IntDiv.asm  Soma5.asm  teste.asm
models/: lr_model_bal.joblib
notebooks/: 01_analise_dataset.ipynb  01_preparando_dataset.ipynb  02_experimentos_regressao.ipynb  02_preparando_dataset.ipynb  03_experimentos_regressao.ipynb  03_modelo_classificacao.ipynb  04_avaliando_modelo.ipynb  04_modelo_classificacao.ipynb  05_avaliando_modelo.ipynb
notebooks/experiments_notebooks/: salary_regressor_classifier_v2.ipynb  salary_regressor_predictor_v1.ipynb
src/: data_loading.py  preprocessing.py
